--- a/pagination/templates/pagination/pagination.html
+++ b/pagination/templates/pagination/pagination.html
@@ -1,3 +1,4 @@
+{% if is_paginated %}
 <div class="pagination">
     {% if page_obj.has_previous %}
         <a href="?page={{ page_obj.previous_page_number }}">&lsaquo;&lsaquo; previous</a>
@@ -21,3 +22,4 @@
         <span class="disabled">next &rsaquo;&rsaquo;</span>
     {% endif %}
 </div>
+{% endif %}
