--- a/pagination/templates/pagination/pagination.html
+++ b/pagination/templates/pagination/pagination.html
@@ -1,7 +1,8 @@
 {% if is_paginated %}
 <div class="pagination">
     {% if page_obj.has_previous %}<a href="?page={{ page_obj.previous_page_number }}" class="prev">&lsaquo;&lsaquo; previous</a> {% else %}<span class="disabled prev">&lsaquo;&lsaquo; previous</span> {% endif %}
-    {% for page in pages %}{% if page %}{% ifequal page page_obj.number %}<span class="current page">{{ page }}</span> {% else %}<a href="?page={{ page }}" class="page">{{ page }}</a> {% endifequal %}{% else %} ... {% endif %}{% endfor %}
+    {% for page in pages %}{% if page %}{% ifequal page page_obj.number %}<span class="current page">{{ page }}</span> {% else %}<a href="?page={{ page }}" class="page">{{ page }}</a> {% endifequal %}{% else %} ... {% endif %}
+    {% endfor %}
     {% if page_obj.has_next %}<a href="?page={{ page_obj.next_page_number }}" class="next">next &rsaquo;&rsaquo;</a>{% else %}<span class="disabled next">next &rsaquo;&rsaquo;</span>{% endif %}
 </div>
 {% endif %}
